Update Presto configuration, add new tools documentation endpoint, and enhance error handling in MCP services